# platform.core.uifw.stt

./: AUTHORS  CMakeLists.txt  COPYING  NOTICE  changelog  org.tizen.voice.sttserver.service  stt-config.xml  stt-server.conf  stt-server.manifest  stt-server.rule  sysinfo-stt.xml
client/: CMakeLists.txt  stt.c  stt.h  stt.pc.in  stt_client.c  stt_client.h  stt_dbus.c  stt_dbus.h  stt_file.c  stt_file_client.c  stt_file_client.h  stt_main.h  stt_setting.c  stt_setting.h  stt_setting_dbus.c  stt_setting_dbus.h
common/: stt_config_mgr.c  stt_config_mgr.h  stt_config_parser.c  stt_config_parser.h  stt_defs.h  stt_engine.c  stt_engine.h  stt_network.c  stt_network.h
debian/: changelog  control  copyright  libstt-dev.install.in  libstt.install.in  rules
doc/: doxyfile  uix_stt_doc.h  uix_stt_engine_main_doc.h
include/: CMakeLists.txt  stt-engine.pc.in  stt-file.pc.in  stt-setting.pc.in  stt.h  stt_file.h  stt_setting.h  stte.h
packaging/: stt.changes  stt.spec
server/: CMakeLists.txt  sttd.conf  sttd_client_data.c  sttd_client_data.h  sttd_config.c  sttd_config.h  sttd_dbus.c  sttd_dbus.h  sttd_dbus_server.c  sttd_dbus_server.h  sttd_engine_agent.c  sttd_engine_agent.h  sttd_main.c  sttd_main.h  sttd_network.c  sttd_network.h  sttd_recorder.c  sttd_recorder.h  sttd_server.c  sttd_server.h  stte.c  sttp.h
test/: CMakeLists.txt  test_main.c
